# rusty-sheet

./: .gitmodules  Cargo.toml  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.vue  main.js  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/CharacterCreation/: ClassSelect.vue  ItemSelect.vue  Name.vue  Navigation.vue  Race.vue  RaceSelect.vue
src/router/: index.js
src/views/: CharacterCreationView.vue  HomeView.vue
