[package]
name = "rusty-sheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.18.1"
rusty-sheet-core = { path = "./rusty-sheet-core" }
uuid = { version = "1.8.0", features = ["serde", "v4"]}